--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "sass": "^1.56.1",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "materialize-css": "^1.0.0"
     }
 }
